--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Embed Player</title>
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <script src="index.js"></script>
 </head>
 <body>
+    <script src="index.js"></script>
     <input id="yt_link" style="width: 300px" placeholder="Paste YouTube Link">
-    <br>
+    <br id="1">
     <button onclick="load()" id="load_button">PLAY VIDEO</button>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <a href="https://githubkindasus.github.io/Hide-YouTube-Controls-Title-Bar/"><button>Press Me if you wish to HIDE annoying YouTube Controls & Title Bar!</button></a>
+    <br id="2">
+    <br id="3">
+    <br id="4">
+    <br id="5">
+    <br id="6">
+    <br id="7">
+    <br id="8">
+    <br id="9">
+    <br id="10">
+    <br id="11">
+    <br id="12">
+    <br id="13">
+    <a id="Hide-YouTube-Controls-Title-Bar" href="https://githubkindasus.github.io/Hide-YouTube-Controls-Title-Bar/"><button>Press Me if you wish to HIDE annoying YouTube Controls & Title Bar!</button></a>
 </body>
 </html>
