--- a/index.html
+++ b/index.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Embed Player</title>
-    <link rel="icon" type="image/png" href="favicon.png"/>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="favicon.png"/>
+  <title>Youtube Embed Video</title>
 </head>
 <body>
-    <script src="index.js"></script>
-    <input id="yt_link" style="width: 300px" placeholder="Paste YouTube Link">
-    <br id="1">
-    <button onclick="load()" id="load_button">PLAY VIDEO</button>
-    <br id="2">
-    <br id="3">
-    <br id="4">
-    <br id="5">
-    <br id="6">
-    <br id="7">
-    <br id="8">
-    <br id="9">
-    <br id="10">
-    <br id="11">
-    <br id="12">
-    <br id="13">
-    <a id="Hide-YouTube-Controls-Title-Bar" href="https://githubkindasus.github.io/Hide-YouTube-Controls-Title-Bar/"><button>Press Me if you wish to HIDE annoying YouTube Controls & Title Bar!</button></a>
+  <script src="index.js"></script>
 </body>
 </html>
