--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/get-video-id/dist/get-video-id.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="favicon.png"/>
   <title>Youtube Embed Video</title>
